# TemplatCMake

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  my_app.cpp
src/Math/: CMakeLists.txt  vector.cpp  vector.hpp
tests/testsMath/: CMakeLists.txt  test_vector3D.cpp
